# pyplecs

./: .coverage  .gitignore  .travis.yml  404.html  API.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  FOUNDATIONAL_CLASSES_SUMMARY.md  GITHUB_RELEASE.md  INSTALL.md  LICENSE  MIGRATION.md  PRD.md  PROGRESS_MEMO.md  README.md  README.rst  REFACTORING.md  RELEASE_NOTES_v1.0.0.md  WEBGUI.md  _start_api.py  cli_demo.py  cli_demo_nomocks.py  context.py  demo_fastapi_real.py  development_environment_setup.md  enhanced_fastapi_demo.py  fastapi_demo.py  force_push_plan.txt  index.html  method_specifications.md  minimal_fastapi_test.py  mkdocs.yml  pyproject.toml  quick_test.py  requirements-cache.txt  requirements-core.txt  requirements-dev.txt  requirements-gui.txt  requirements-opt.txt  (+18 more)
.claude/: skills.md
.githooks/: pre-push
api/: index.html
architecture/: index.html
articles/: ARTICLE_SERIES_SUMMARY.md
auto-context/: index.html
changelog/: index.html
config/: default.yml
contributing/: index.html
data/: fb_src_prb.plecs  simple_boost_prb.plecs  simple_buck.plecs  simple_buck_allprobes.plecs  simple_buck_prb.plecs  simple_buckboost_prb.plecs  simple_nibb_prb.plecs
docs/: CLI_DEMO_NOMOCKS.md  DEV_PLAN.md  METHOD_CONSOLIDATION_SUMMARY.md  OPUS41_REVIEW.md  PROGRESS_MEMO.md  REAL_PLECS_INTEGRATION_MEMO.md  REFACTORING_CLEAN.md  WORKFLOW_FREEZE_MEMO.md  api.md  architecture.md  auto-context.md  changelog.md  codebase_analysis.md  conf.py  contributing.md  dependency_map.md  examples.rst  incomplete_methods_inventory.md  index.md  index.rst  install.md  prd.md  prd_future.md  release_checklist.md  release_notes_v1.0.0.md  shared_utilities_requirements.md  tas_sprint_planning_converter_lib.md  tas_timeline_visual.md  webgui.md  xml_rcp_plecs.md
examples/: README.md  integrate_with_fastapi.md  integrate_with_fastapi.py  load_model_and_set_vars.md  load_model_and_set_vars.py  parallel_coordinate_implementation.py  parameter_sweep.md  parameter_sweep.py  parameter_sweep_fixed.py  real_plecs_parallel_analysis.py  run_headless_sim.md  run_headless_sim.py  simple_buck_example.md  simple_buck_example.py  simple_simulation.md  simple_simulation.py  test_all.py  test_simple.py  working_example.py
github_release/: index.html
install/: index.html
migration/: index.html
prd/: index.html
prd_future/: index.html
prompts/: code_review.md
pycircuitsim_core/: __init__.py  cache.py  config.py  logging.py  models.py  orchestration.py  server.py
pyplecs/: __init__.py  config.py  contracts.py  exceptions.py  plecs_components.py  plecs_parser.py  pyplecs.py  utils.py
release/: RELEASE_READY.txt
release_checklist/: index.html
release_notes_v1.0.0/: index.html
search/: search_index.json
static/: style.css
(+202 files in other folders)
