[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyplecs"
version = "1.0.0"
description = "Advanced PLECS simulation automation with web UI and API"
readme = "README.md"
authors = [ { name = "riccardo tinivella", email = "tinix84@gmail.com" }]
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "pyyaml",
    "pydantic>=2.0",
    "structlog>=21.1.0",
    "click>=8.0.0",
    "python-dotenv>=0.19.0",
    "packaging>=21.0",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.68.0",
    "uvicorn[standard]>=0.15.0",
    "jinja2>=3.0.0",
    "aiofiles>=0.7.0",
    "websockets>=10.0",
    "python-multipart>=0.0.5",
    "plotly>=5.0.0",
    "rich>=10.0.0",
    "tqdm>=4.62.0",
]
mcp = ["mcp>=1.0"]
dev = [
    "beautifulsoup4>=4.12",
    "httpx>=0.25",
    "mcp>=1.0",
    "pytest",
    "ruff",
]

[tool.setuptools.packages.find]
include = ["pyplecs*"]

[project.scripts]
pyplecs-api = "pyplecs.api:main"
pyplecs-setup = "pyplecs.cli.installer:main"
pyplecs-gui = "pyplecs.webgui:run_app"

[tool.ruff]
target-version = "py38"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F841"]
"docs/articles/*" = ["F841"]
